# opt-gen

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/libs/opt-gen/: Cargo.toml
crates/libs/opt-gen/src/: lib.rs  opt_gen.rs  utils.rs
crates/tests/opt-gen-test/: Cargo.toml
crates/tests/opt-gen-test/tests/: opt_test.rs
