[package]
name = "opt-gen"
version = "0.0.1"
edition = "2021"

authors = ["litcc <i@litcc.com>"]
description = "Claims to have a new structure with Option as a field."
license = "MIT"  # 或者使用适当的许可证
repository = "https://github.com/litcc/opt-gen"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full","derive","extra-traits"] }
rust-format = { version = "0.3" }
rand = {version = "0.8"}